# toghchain

./: .travis.yml  README.md
dail/constituencies/carlow–kilkenny/: 1921_general_election.json  1922_general_election.json  1923_general_election.json  1925_by-election.json  1927_by-election.json  1932_general_election.json  1933_general_election.json  1948_general_election.json  1951_general_election.json  1954_general_election.json  1956_by-election.json  1957_general_election.json  1960_by-election.json  1961_general_election.json  1965_general_election.json  1969_general_election.json  1973_general_election.json  1977_general_election.json  1981_general_election.json  1987_general_election.json  1989_general_election.json  1992_general_election.json  1997_general_election.json  2002_general_election.json  2007_general_election.json  2011_general_election.json  2015_by-election.json  2016_general_election.json  february_1982_general_election.json  june_1927_general_election.json  november_1982_general_election.json  september_1927_general_election.json
dail/constituencies/cavan–monaghan/: 1977_general_election.json  1981_general_election.json  1987_general_election.json  1989_general_election.json  1992_general_election.json  1997_general_election.json  2002_general_election.json  2007_general_election.json  2011_general_election.json  2016_general_election.json  february_1982_general_election.json  (+1 more)
src/mongoloid/: Cargo.toml  README.md
src/mongoloid/src/: lib.rs  main.rs  util.rs
src/mongoloid/test/dail/constituencies/offaly/: 2016_general_election.json
(+801 files in other folders)
